# wam_hybrid_control

./: README.md
.data/: calib1.txt  gridTestcalib_l1  gridTestcalib_w1  trj1.txt
.data/gridTest/: calib_l1  calib_l2  calib_w1  calib_w2
Libbarrett_Computed_Torque_Controller/: CMakeLists.txt  C_4D.hpp  README.md  constant_vel_refference_traj.hpp  regulation_refference_trajectory.hpp  wam_cartesian_space_ID_controller_4dof.cpp  wam_joint_space_ID_controller_4dof.cpp
WAM_Force_Estimation/4dof_dynamics/: CMakeLists.txt  Dynamics.hpp  README.md  force_estimator_4dof.hpp  wam_force_estimation_4dof.cpp
WAM_Force_Estimation/Libbarrett_dynamics/: CMakeLists.txt  README.md  differentiator.hpp  force_estimator.hpp  wam_force_estimation.cpp
planar_surface_hybrid_control/: CMakeLists.txt  LICENSE  package.xml
planar_surface_hybrid_control/include/planar_surface_hybrid_control/: impedence_controller.h  planar_surface_hybrid_control.h
planar_surface_hybrid_control/src/: grid_tes.cpp  planar_surface_hybrid_control.cpp
wam_affine_surface_teleop/: CMakeLists.txt  package.xml
wam_affine_surface_teleop/include/wam_affine_surface_teleop/: impedence_controller.h  spacemouse_teleop_rviz+wam.h  spacemouse_teleop_rviz.h  spacemouse_teleop_wam.h  static_force_estimator_withg.h
wam_affine_surface_teleop/launch/: rviz.launch
wam_affine_surface_teleop/rviz/: view.rviz
wam_affine_surface_teleop/src/: spacemouse_teleop_rviz+wam.cpp  spacemouse_teleop_rviz.cpp  spacemouse_teleop_wam.cpp  visualizing_wam_data.cpp
wam_cmp_trq_cntl/: CMakeLists.txt  package.xml
wam_cmp_trq_cntl/include/: constant_vel_refference_traj.hpp
wam_cmp_trq_cntl/src/: wam_cartesian_space_ID_controller_4dof.cpp  wam_joint_space_ID_controller_4dof.cpp
wam_force_estimation/: CMakeLists.txt  README.md  package.xml
wam_force_estimation/include/: M_4D.hpp  differentiator.hpp  extended_Tool_Orientation.hpp  extended_ramp.hpp  force_estimator.hpp  force_estimator_4dof.hpp  get_jacobian_system.hpp  get_tool_position_system.hpp  wam_surface_Estimator.hpp
wam_force_estimation/msg/: RTCartForce.msg
wam_force_estimation/src/: wam_force_estimation.cpp  wam_force_estimation_4dof.cpp
wam_spf_control/: CMakeLists.txt  package.xml
wam_spf_control/include/planar_surface_hybrid_control/: get_jacobian_system.h  planar_surface_hybrid_control.h
wam_spf_control/src/: planar_surface_hybrid_control.cpp
