<?xml version="1.0"?>
<package format="2">
  <name>wam_cmp_trq_cntl</name>
  <version>0.0.0</version>
  <description>The wam_cmp_trq_cntl package is for computed torque control of wam arm.</description>

  <maintainer email="haghverd@ualberta.ca">funzi</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/wam_hybrid_control</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>wam_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>wam_msgs</build_depend>
  <build_depend>wam_srvs</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>wam_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>wam_msgs</exec_depend>
  <exec_depend>wam_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>